[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Login.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 19
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 290.909
margin_top = 149.5
margin_right = 694.909
margin_bottom = 211.5
custom_fonts/font = SubResource( 1 )
text = "Tank Shooter by Arman Shaikh"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" type="Button" parent="."]
margin_left = 444.909
margin_top = 313.5
margin_right = 542.909
margin_bottom = 333.5
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reg" type="Button" parent="."]
margin_left = 445.909
margin_top = 346.5
margin_right = 543.909
margin_bottom = 366.5
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 413.909
margin_top = 401.5
margin_right = 575.909
margin_bottom = 464.5
custom_fonts/font = SubResource( 2 )
text = "Incorrect username
 and or password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
margin_left = 418.909
margin_top = 470.5
margin_right = 580.909
margin_bottom = 533.5
custom_fonts/font = SubResource( 2 )
text = "Logged in"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Userbox" type="TextEdit" parent="."]
margin_left = 418.909
margin_top = 240.5
margin_right = 562.909
margin_bottom = 264.5
text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Passbox" type="TextEdit" parent="."]
margin_left = 417.909
margin_top = 273.5
margin_right = 561.909
margin_bottom = 297.5
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Log" to="." method="_on_Log_pressed"]
[connection signal="pressed" from="Reg" to="." method="_on_Reg_pressed"]
